WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248314
Web Inspector: REGRESSION(
r256223
@main) Styles Panel: All CSS variables marked as unsupported
https://bugs.webkit.org/show_bug.cgi?id=248314
Summary
Web Inspector: REGRESSION(r256223@main) Styles Panel: All CSS variables marke...
Razvan Caliman
Reported
2022-11-24 09:53:39 PST
Created
attachment 463712
[details]
Screenshot of regression on webkit.org All CSS variables shown in the Styles sidebar panel are marked as unsupported property names. Regressed by
https://github.com/WebKit/WebKit/commit/a10c81dcc8fb22521e0999dc7e119a94c92c7520
Works: Internal 402a724715bb - OpenSource
256222@main
Fails: Internal 402a724715bb - OpenSource
256223@main
https://commits.webkit.org/compare/256223@main...256222@main
Attachments
Screenshot of regression on webkit.org
(197.17 KB, image/png)
2022-11-24 09:53 PST
,
Razvan Caliman
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-24 09:54:37 PST
<
rdar://problem/102650207
>
Razvan Caliman
Comment 2
2022-11-29 11:22:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6927
EWS
Comment 3
2022-12-08 07:00:07 PST
Committed
257564@main
(a6fb71355a3d): <
https://commits.webkit.org/257564@main
> Reviewed commits have been landed. Closing PR #6927 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug